--- a/index.html
+++ b/index.html
@@ -251,13 +251,33 @@
           <p class="text-gray-600 text-base">Captures ChatGPT, Gemini, Claude, Perplexity, and beyond.</p>
         </div>
       </div>
-      <ul class="list-check">
-        <li><svg width="16" height="16" viewBox="0 0 20 20" aria-hidden="true"><circle cx="10" cy="10" r="9" fill="#4CAF50"></circle><path d="M6.5 10.5l2.5 2.5 4.5-4.5" stroke="#fff" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"></path></svg>Zero-friction capture—one click locks in just the part you need.</li>
-        <li><svg width="16" height="16" viewBox="0 0 20 20" aria-hidden="true"><circle cx="10" cy="10" r="9" fill="#4CAF50"></circle><path d="M6.5 10.5l2.5 2.5 4.5-4.5" stroke="#fff" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"></path></svg>Reliable sourcing—built-in URL & timestamp keep citations honest.</li>
-        <li><svg width="16" height="16" viewBox="0 0 20 20" aria-hidden="true"><circle cx="10" cy="10" r="9" fill="#4CAF50"></circle><path d="M6.5 10.5l2.5 2.5 4.5-4.5" stroke="#fff" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"></path></svg>Clean boundaries—clips land in the right project, never a dump pile.</li>
-        <li><svg width="16" height="16" viewBox="0 0 20 20" aria-hidden="true"><circle cx="10" cy="10" r="9" fill="#4CAF50"></circle><path d="M6.5 10.5l2.5 2.5 4.5-4.5" stroke="#fff" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"></path></svg>Easy in/out—import old notes, export polished reports without extra tools.</li>
-        <li><svg width="16" height="16" viewBox="0 0 20 20" aria-hidden="true"><circle cx="10" cy="10" r="9" fill="#4CAF50"></circle><path d="M6.5 10.5l2.5 2.5 4.5-4.5" stroke="#fff" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"></path></svg>Pro-tier convenience—Word support keeps Office-centric teammates in the loop.</li>
-      </ul>
+      <div class="grid feature-grid gap-5" style="margin-top:2rem;">
+        <div class="card-feature">
+          <div class="icon-circle"><svg width="28" height="28" viewBox="0 0 24 24" aria-hidden="true"><circle cx="12" cy="12" r="9" fill="#4CAF50" opacity="0.13"/><path d="M12 5v2m0 10v2m5-5h2m-10 0H5" stroke="#4CAF50" stroke-width="1.7" stroke-linecap="round"/><circle cx="12" cy="12" r="3" stroke="#4CAF50" stroke-width="1.7" fill="none"/></svg></div>
+          <h4 class="font-semibold text-lg text-[#1a2a1a] mb-1">Zero-Friction Capture</h4>
+          <p class="text-gray-600 text-base">One click locks in exactly what you need.</p>
+        </div>
+        <div class="card-feature">
+          <div class="icon-circle"><svg width="28" height="28" viewBox="0 0 24 24" aria-hidden="true"><path d="M10 13a4 4 0 010-6l2-2a4 4 0 016 6l-1 1" stroke="#4CAF50" stroke-width="1.7" fill="none"/><path d="M14 11a4 4 0 010 6l-2 2a4 4 0 01-6-6l1-1" stroke="#4CAF50" stroke-width="1.7" fill="none"/></svg></div>
+          <h4 class="font-semibold text-lg text-[#1a2a1a] mb-1">Reliable Sourcing</h4>
+          <p class="text-gray-600 text-base">Built‑in URL &amp; timestamp keep citations honest.</p>
+        </div>
+        <div class="card-feature">
+          <div class="icon-circle"><svg width="28" height="28" viewBox="0 0 24 24" aria-hidden="true"><rect x="3" y="7" width="18" height="12" rx="2" fill="#4CAF50" opacity="0.13"/><path d="M7 10l4 4 6-6" stroke="#4CAF50" stroke-width="1.7" fill="none" stroke-linecap="round"/></svg></div>
+          <h4 class="font-semibold text-lg text-[#1a2a1a] mb-1">Clean Boundaries</h4>
+          <p class="text-gray-600 text-base">Clips land in the right project—never a dump pile.</p>
+        </div>
+        <div class="card-feature">
+          <div class="icon-circle"><svg width="28" height="28" viewBox="0 0 24 24" aria-hidden="true"><path d="M8 17v4h8v-4m-4-10v10" stroke="#4CAF50" stroke-width="1.7" fill="none" stroke-linecap="round"/><path d="M8 7l4-4 4 4" stroke="#4CAF50" stroke-width="1.7" fill="none" stroke-linecap="round"/></svg></div>
+          <h4 class="font-semibold text-lg text-[#1a2a1a] mb-1">Easy In/Out</h4>
+          <p class="text-gray-600 text-base">Import old notes and export polished reports fast.</p>
+        </div>
+        <div class="card-feature">
+          <div class="icon-circle"><svg width="28" height="28" viewBox="0 0 24 24" aria-hidden="true"><rect x="4" y="4" width="16" height="16" rx="2" fill="#4CAF50" opacity="0.13"/><path d="M7 8l1.5 8L12 9l3.5 7 1.5-8" stroke="#4CAF50" stroke-width="1.7" stroke-linejoin="round" fill="none"/></svg></div>
+          <h4 class="font-semibold text-lg text-[#1a2a1a] mb-1">Pro-Tier Convenience</h4>
+          <p class="text-gray-600 text-base">Word support keeps Office-centric teams in the loop.</p>
+        </div>
+      </div>
       <p style="font-size:0.95rem;color:#555;max-width:720px;margin:0 auto;">Micro-proof: users report cutting research time by 30–50% after the first week.</p>
       <section id="roadmap" class="roadmap" style="margin-top:3rem;text-align:center;">
         <div class="urgency" style="margin-top:0; margin-bottom:1.5rem;">
