Add SEO meta tags and robots.txt

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>The Memory Mate – Save Your Best AI Answers Instantly</title>
   <meta name="description" content="Save your favorite AI chatbot answers in one click. Memory Mate organizes, tags and finds them instantly, giving you a 10× productivity boost and building your second brain.">
+  <meta name="keywords" content="AI answers, chatbot notes, productivity extension, second brain">
+  <meta property="og:title" content="The Memory Mate – Save Your Best AI Answers Instantly">
+  <meta property="og:description" content="Save and organize AI replies with one click. Build your second brain and recall insights in seconds.">
+  <meta property="og:image" content="logo/logo.png">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://thememorymate.example.com/">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="The Memory Mate – Save Your Best AI Answers Instantly">
+  <meta name="twitter:description" content="Save and organize AI chatbot answers effortlessly. Reclaim knowledge and boost productivity.">
+  <meta name="twitter:image" content="logo/logo.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <style>
     * { box-sizing: border-box; }
