Fix Add to Chrome links and expand terms

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <li><a href="#how">How it Works</a></li>
         <li><a href="#features">Features</a></li>
         <li><a href="#testimonials">Testimonials</a></li>
-        <li><a href="#download" class="btn-primary">Add to Chrome</a></li>
+        <li><a href="https://chromewebstore.google.com/detail/the-memory-mate/calfccccgohkapncggmfkmnmjonogkae" class="btn-primary">Add to Chrome</a></li>
       </ul>
     </nav>
   </header>
