--- a/terms.html
+++ b/terms.html
@@ -19,7 +19,10 @@
   </header>
   <main class="container">
     <h1>Terms &amp; Conditions</h1>
-    <p>Use of The Memory Mate extension is provided “as is” without warranties. By installing or using the extension you agree not to redistribute it or misuse the service.</p>
+    <p>By installing or using The Memory Mate extension you agree to follow these Terms and all applicable laws. You may not copy, modify, distribute or reverse engineer any part of the extension or its trademarks.</p>
+    <p>The extension is provided "as is" without warranty of any kind. To the fullest extent permitted by law, The Memory Mate disclaims all warranties, whether express or implied. We are not liable for any damages or losses arising from your use of the extension.</p>
+    <p>We may update the extension or these Terms at any time. Continued use after changes become effective constitutes acceptance of the new Terms. If you do not agree with the revised Terms, please uninstall the extension.</p>
+    <p>If you have questions about these Terms, contact us at <a href="mailto:admin@thememorymate.com">admin@thememorymate.com</a>.</p>
   </main>
   <footer>
     <a href="privacy.html">Privacy Policy</a>
