Style nav buttons and add gradient backgrounds

--- a/terms.html
+++ b/terms.html
@@ -6,7 +6,7 @@
   <title>Terms | The Memory Mate</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <style>
-    body { margin:0;font-family:'Inter','Roboto',sans-serif;background:#fff;color:#1a2a1a;line-height:1.6; }
+    body { margin:0;font-family:'Inter','Roboto',sans-serif;background:linear-gradient(180deg,#f8fff9 0%,#e9faee 100%);color:#1a2a1a;line-height:1.6; }
     .container { max-width:900px;margin:0 auto;padding:2rem; }
     header,footer { text-align:center;padding:1rem 0; }
     footer { background:#e9faee;border-top:1px solid #e6f4ea; }
