--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       margin: 0;
       font-family: 'Inter', 'Roboto', 'Open Sans', sans-serif;
       color: #1a2a1a;
-      background: #fff;
+      background: linear-gradient(180deg,#f8fff9 0%,#e9faee 100%);
       line-height: 1.6;
       scroll-behavior: smooth;
     }
@@ -38,8 +38,24 @@
       align-items: center;
       gap: 1rem;
     }
-    .menu { display: flex; gap: 2rem; }
-    .menu a { padding: 0.25rem 0; }
+    .menu {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      gap: 2rem;
+    }
+    .menu a {
+      display: inline-block;
+      padding: 0.45rem 0.8rem;
+      border-radius: 0.5rem;
+      font-weight: 500;
+      color: #4CAF50;
+    }
+    .menu a:not(.btn-primary):hover,
+    .menu a:not(.btn-primary):focus-visible {
+      background: #e9faee;
+    }
     .btn-primary {
       background: #4CAF50;
       color: #fff;
@@ -208,7 +224,7 @@
         <li><a href="#how">How it Works</a></li>
         <li><a href="#features">Features</a></li>
         <li><a href="#testimonials">Testimonials</a></li>
-        <li><a href="#download" class="btn-primary">Add to Chrome</a></li>
+        <li><a href="https://chromewebstore.google.com/detail/the-memory-mate/calfccccgohkapncggmfkmnmjonogkae" class="btn-primary">Add to Chrome</a></li>
       </ul>
     </nav>
   </header>
@@ -217,7 +233,7 @@
       <div class="hero-text">
         <h1>Never Lose Another AI Breakthrough—Your Second Brain Awaits</h1>
         <p class="lead">Save any answer from ChatGPT, Gemini, Claude or Perplexity in one click. Find it again before your coffee cools. That's a 10× boost today—on the path to a 100× second brain.</p>
-        <a href="#" class="btn-primary">Add to Chrome — Free Forever</a>
+        <a href="https://chromewebstore.google.com/detail/the-memory-mate/calfccccgohkapncggmfkmnmjonogkae" class="btn-primary">Add to Chrome — Free Forever</a>
         <small>Zero forms. Data stored only locally.</small>
       </div>
       <div class="hero-img">
@@ -375,7 +391,7 @@
             <p class="text-gray-600 text-base">Our AI surfaces the perfect snippet and rewrites your prompt for you.</p>
           </div>
         </div>
-        <p style="margin-top:1.5rem;"><a href="#" class="btn-primary">Add to Chrome — Free Forever</a></p>
+        <p style="margin-top:1.5rem;"><a href="https://chromewebstore.google.com/detail/the-memory-mate/calfccccgohkapncggmfkmnmjonogkae" class="btn-primary">Add to Chrome — Free Forever</a></p>
         <small class="microcopy">Zero forms. Data stored only locally.</small>
       </section>
     </section>
@@ -394,16 +410,16 @@
     </section>
     <section class="section" id="download" style="text-align:center;padding-top:0;">
         <h2 style="font-size:2rem;font-weight:600;margin-bottom:1rem;">Ready for a 10× productivity boost?<span style="display:block;font-size:1rem;margin-top:0.4rem;">Ride the 100× wave as new features land.</span></h2>
-      <a href="#" class="btn-primary" style="font-size:1.1rem;">Add to Chrome — Free Forever</a>
+      <a href="https://chromewebstore.google.com/detail/the-memory-mate/calfccccgohkapncggmfkmnmjonogkae" class="btn-primary" style="font-size:1.1rem;">Add to Chrome — Free Forever</a>
         <small class="microcopy">Zero forms. Remove anytime in two clicks.</small>
     </section>
   </main>
   <footer>
     <div class="container" style="display:flex;flex-direction:column;align-items:center;text-align:center;">
       <div class="links">
-        <a href="#">Privacy Policy</a>
-        <a href="#">Terms</a>
-        <a href="#">Contact</a>
+        <a href="privacy.html">Privacy Policy</a>
+        <a href="terms.html">Terms</a>
+        <a href="contact.html">Contact</a>
       </div>
       <div class="bottom">© 2025 The Memory Mate. Made by humans who hate re-typing answers.</div>
     </div>
