Fix header button text color

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
       font-weight: 500;
       color: #4CAF50;
     }
+    .menu a.btn-primary {
+      color: #fff;
+    }
     .menu a:not(.btn-primary):hover,
     .menu a:not(.btn-primary):focus-visible {
       background: #e9faee;
