Ensure nav Add to Chrome button text is white

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       color: #4CAF50;
     }
     .menu a.btn-primary {
-      color: #fff;
+      color: #fff !important;
     }
     .menu a:not(.btn-primary):hover,
     .menu a:not(.btn-primary):focus-visible {
