--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Favicons -->
+<link rel="icon" type="image/png" sizes="16x16"  href="logo/icon-16.png">
+<link rel="icon" type="image/png" sizes="48x48"  href="logo/con-48.png">
+<link rel="icon" type="image/png" sizes="128x128" href="logo/icon-128.png">
+
+<!-- iOS & high-DPI “Add to Home Screen” -->
+<link rel="apple-touch-icon" sizes="128x128" href="logo/icon-128.png">
+
+<!-- Optional legacy fallback (very old browsers) -->
+<link rel="shortcut icon" href="logo/icon-16.png">
   <title>The Memory Mate – Save Your Best AI Answers Instantly</title>
   <meta name="description" content="Save your favorite AI chatbot answers in one click. Memory Mate organizes, tags and finds them instantly, giving you a 10× productivity boost and building your second brain.">
   <meta name="keywords" content="AI answers, chatbot notes, productivity extension, second brain">
