--- a/privacy.html
+++ b/privacy.html
@@ -2,29 +2,124 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Privacy Policy | The Memory Mate</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>Privacy Policy – The Memory Mate</title>
   <style>
-
-    body { margin:0;font-family:'Inter','Roboto',sans-serif;background:linear-gradient(180deg,#f8fff9 0%,#e9faee 100%);color:#1a2a1a;line-height:1.6; }
-
-    .container { max-width:900px;margin:0 auto;padding:2rem; }
-    header,footer { text-align:center;padding:1rem 0; }
-    footer { background:#e9faee;border-top:1px solid #e6f4ea; }
-    a { color:#4CAF50; }
+    body {
+      font-family: 'Segoe UI', Arial, sans-serif;
+      background: #f7fafc;
+      color: #222;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      max-width: 680px;
+      margin: 32px auto;
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 4px 32px rgba(80,120,100,0.07);
+      padding: 32px 28px 32px 28px;
+    }
+    h1, h2 {
+      color: #256029;
+    }
+    h1 {
+      margin-top: 0;
+      font-size: 2.1em;
+      margin-bottom: 0.2em;
+    }
+    h2 {
+      margin-top: 2em;
+      margin-bottom: 0.5em;
+    }
+    p, li {
+      font-size: 1.09em;
+      line-height: 1.7;
+    }
+    ul {
+      margin: 0 0 1.5em 1.3em;
+    }
+    .date {
+      color: #666;
+      font-size: 0.96em;
+      margin-bottom: 2em;
+    }
+    a { color: #38983c; }
+    @media (max-width: 700px) {
+      .container {
+        padding: 18px 7vw 24px 7vw;
+        border-radius: 0;
+      }
+      h1 { font-size: 1.5em; }
+    }
   </style>
 </head>
 <body>
-  <header>
-    <a href="index.html"><img src="logo/logo.png" alt="Memory Mate logo" width="64" height="64"></a>
-  </header>
-  <main class="container">
+  <div class="container">
     <h1>Privacy Policy</h1>
-    <p>The Memory Mate stores your clipped answers only in your local browser storage. We do not collect or transmit your data.</p>
-  </main>
-  <footer>
-    <a href="terms.html">Terms</a>
-  </footer>
+    <div class="date">Effective date: 04/07/2025</div>
+
+    <h2>1. Introduction</h2>
+    <p>
+      The Memory Mate Chrome Extension (“we”, “us”, or “our”) respects your privacy. This Privacy Policy explains how we handle and protect your data when you use our extension.
+    </p>
+
+    <h2>2. Information We Collect</h2>
+    <ul>
+      <li><strong>Local Storage Only:</strong> The extension stores user data—such as saved AI chatbot answers, projects (folders), and user settings—<b>locally in your browser</b> using Chrome’s extension storage. <b>We do not collect, transmit, or share any personal or saved content with our servers or third parties.</b></li>
+      <li><strong>License Activation (Optional):</strong> If you choose to activate a PRO license, the extension may communicate with our licensing provider (Freemius) to validate your license key and status. Only the minimal data required for license validation (such as license key and email address) is sent to the licensing API.</li>
+    </ul>
+
+    <h2>3. How We Use Your Data</h2>
+    <p>
+      Your data is used <b>solely to provide the extension’s features</b>—including saving, organizing, searching, importing, and exporting answers and projects. No user content or browsing activity is transmitted, analyzed, or sold to anyone.
+    </p>
+
+    <h2>4. Third-Party Services</h2>
+    <p>
+      We use <a href="https://freemius.com/" target="_blank">Freemius</a> for license management and validation. Freemius may process license data (e.g., your email and license key) only for the purpose of validating your PRO features.<br>
+      <b>No saved answers, user content, or browsing data is shared with Freemius or any other third parties.</b>
+    </p>
+
+    <h2>5. Permissions Explained</h2>
+    <ul>
+      <li><b>storage:</b> To save your data locally.</li>
+      <li><b>host_permissions:</b> To capture AI chatbot answers only when you choose.</li>
+      <li><b>downloads & fileSystem:</b> To enable import/export of your saved data.</li>
+    </ul>
+    <p>
+      The extension does <b>not</b> access your browsing history or transmit data without your explicit action.
+    </p>
+
+    <h2>6. Data Security</h2>
+    <p>
+      All data is stored locally within your browser and is never sent to external servers except for license validation (as described above). We take all reasonable precautions to ensure your data remains private and secure.
+    </p>
+
+    <h2>7. User Control</h2>
+    <p>
+      You can delete any or all saved data at any time via the extension’s interface. If you uninstall the extension, all locally stored data is automatically deleted from your browser.
+    </p>
+
+    <h2>8. Children’s Privacy</h2>
+    <p>
+      The extension is not intended for children under the age of 13 and does not knowingly collect any information from children.
+    </p>
+
+    <h2>9. Changes to This Policy</h2>
+    <p>
+      We may update this Privacy Policy from time to time. Any changes will be posted on this page with an updated effective date.
+    </p>
+
+    <h2>10. Contact Us</h2>
+    <p>
+      If you have questions or concerns about this Privacy Policy, please contact us at <a href="mailto:ghitaprn@gmail.com">admin@thememorymate.com</a>.
+    </p>
+
+    <p style="margin-top: 2em; font-size: 0.95em; color: #888;">
+      By using The Memory Mate, you agree to this Privacy Policy.<br>
+      <em>Last updated: 29/06/2025</em>
+    </p>
+  </div>
 </body>
 </html>
